fix issue with overlap checker
-fixed overlap issues with checker
+ still need to fix getKitAvailable

--- a/public/css/comp-calendar.css
+++ b/public/css/comp-calendar.css
@@ -67,6 +67,11 @@
 {
 	border-top: 1px solid #000;
 }
+
+#booking_dialog #booking_message
+{
+	color: red;
+}
 /*********** booking dialog *************************/
 
 #booking_users_options
